--- a/lib/libcurl/Makefile
+++ b/lib/libcurl/Makefile
@@ -11,7 +11,7 @@ CFLAGS += -pipe -Wall -g
 
 LDFLAGS += -lcurl
 
-########################################
+##################################
 .PHONY : all clean
 
 all : $(TARGETS)
@@ -23,3 +23,9 @@ clean :
 	rm -f $(TARGETS)
 	rm -f $(COMMOBJS)
 	rm -f $(foreach target, $(TARGETS), $(target).o)
+
+##################################
+.SUFFIXES : .cpp
+
+.cpp.o :
+		$(CXX) $(CFLAGS) -c -o $@ $<
